[package]
name = "breakout-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
oprt-level = 3

[dependencies]
bevy = "0.11.2"
rand = "0.8.5"
